<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.Menu.MenuContentActivity">

    <item
        android:id="@+id/action_restaurants"
        android:orderInCategory="100"
        android:title="@string/action_restaurants"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_end_point"
        android:orderInCategory="89"
        android:title="@string/action_end_point"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_exit_delivery_mode"
        android:orderInCategory="90"
        android:title="@string/action_delivery_mode_exit"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_show_statistics"
        android:orderInCategory="91"
        android:title="@string/action_show_statistics"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="92"
        android:title="@string/action_logout"
        app:showAsAction="never" />

</menu>
