<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.login.DeliverManLoginActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:background="@color/transparent"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize" />

        <TextView
            style="@style/TextStyle.LoginTitle"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:text="@string/delivery_man_login"
            android:drawablePadding="15dp"
            android:textColor="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            style="@style/TextStyle.LoginField"
            android:id="@+id/ed_username"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical|left"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:drawablePadding="15dp"
            android:hint="@string/username"
            android:inputType="text"
            android:textColor="@color/black"
            />

        <EditText
            style="@style/TextStyle.LoginField"
            android:id="@+id/ed_password"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical|left"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:drawablePadding="15dp"
            android:textColor="@color/black"
            />

        <Button
            style="@style/AppTheme.Button.Confirm"
            android:id="@+id/bt_login"
            android:layout_marginTop="40dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/i_login"
            android:layout_width="100dp"
            android:background="@drawable/bt_login_bg"
            android:textColor="@color/white"
            android:layout_height="wrap_content" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
