<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin_double"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_gravity="center"
        android:src="@drawable/ic_baseline_my_location_24"
        android:layout_width="130dp"
        android:layout_height="130dp"/>

    <TextView
        android:layout_marginLeft="@dimen/activity_horizontal_margin_half"
        android:layout_marginRight="@dimen/activity_horizontal_margin_half"
        android:layout_marginBottom="@dimen/activity_horizontal_margin_half"
        android:layout_marginTop="@dimen/activity_horizontal_margin_double"
        android:text="@string/enter_delivery_mode_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">


        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="2"/>

    <TextView
        android:layout_weight="1"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:id="@+id/bt_cancel"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:gravity="center"
        android:textSize="12sp"
        android:background="@drawable/bg_already_paid_rounded"
        android:textColor="@color/white"
        android:text="@string/cancel"
        android:textAllCaps="true"
        android:layout_marginBottom="@dimen/activity_horizontal_margin_half"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="2"/>

        <TextView
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:id="@+id/bt_confirm"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:gravity="center"
            android:textSize="12sp"
            android:background="@drawable/bt_login_bg"
            android:textColor="@color/white"
            android:text="@string/confirm"
            android:layout_marginBottom="@dimen/activity_horizontal_margin_half"
            android:layout_width="wrap_content"
            android:textAllCaps="true"
            android:layout_height="wrap_content"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="2"/>

    </androidx.appcompat.widget.LinearLayoutCompat>


</LinearLayout>